# d3d12-hello-triangle

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  debug.bat  main.c  shaders.hlsl  vec.h
